# own-copilot

./: .env.example  .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  feat-code-review-ci-integration.md  pyproject.toml
.github/workflows/: ci.yml
app/: config.py  factory.py  logging_utils.py
app/agentic/application/: graph_chat_service.py
app/agentic/domain/: graph_state.py
app/agentic/infra/: langgraph_builder.py
app/api/: main.py
app/conversation/application/: chat_service.py  question_rewriter.py
app/conversation/domain/: conversation.py  conversation_message.py  conversation_repo_proto.py
app/conversation/infra/: postgres_conversation_repo.py
app/core/: llm.py
app/infra/: db.py
app/ingestion/application/: ingestion_service.py  worker_service.py
app/ingestion/domain/: chunk_repo_proto.py  document.py  document_repo_proto.py  file_validator.py  job.py  job_repo_proto.py  storage_repo_proto.py
app/ingestion/infra/: adapters.py  dtos.py  endpoints.py  in_filesystem_storage_repo.py  in_memory_chunk_repo.py  in_memory_document_repo.py  in_memory_job_repo.py  in_memory_storage_repo.py  postgres_chunk_repo.py  postgres_document_repo.py  postgres_job_repo.py
app/prompts/: rag_prompt.py  rewrite_prompt.py
app/repositories/application/: remediate_reviewed_branch_in_sandbox.py  request_repository_sync.py  resolve_repository_branch_sync.py  review_repository_branch_against_main.py
app/repositories/domain/: git_repository_service_proto.py  remediation.py  repository.py  repository_repo_proto.py  (+4 more)
app/schemas/: chat.py  tools.py
app/worker/: factory.py  main.py
db/: schema.sql
db/migrations/: 20260327105700_create_documents_table.sql  20260327121038_update_document_model.sql  20260327121326_create_jobs_table.sql  20260327153144_enable_pgvector.sql  20260327153924_add_embedding_to_documents.sql  20260327155454_fix_document_embedding_and_chunks.sql  20260328111030_add_repository_sync.sql  20260329095838_update_document_statuses_labels.sql  20260329105900_add_content_hash_index.sql  20260329110800_make_content_hash_unique.sql  20260329114100_relax_content_hash_unique.sql  20260330074716_add_conversations.sql  20260402091500_expand_document_extension_length.sql  20260403110000_enable_pg_trgm_for_hybrid_search.sql
sandbox/: Dockerfile  docker_sandbox.py
scripts/: api_client.py
tests/: conftest.py  test_config.py  test_llm.py
tests/integration/: conftest.py  test_chat_rag.py  test_full_workflow_e2e.py  test_postgres_conversation_repo.py  test_postgres_repos.py  test_raptor_e2e.py  test_retrieval_threshold.py
tests/unit/: test_file_validator.py
(+111 files in other folders)
