[project]
name = "own-copilot"
version = "0.1.0"
description = "Personal AI Coding Assistant (Copilot)"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi[standard]>=0.135.2",
    "langchain-ollama>=1.0.1",
    "psycopg[binary]>=3.3.3",
    "pydantic>=2.12.5",
    "uvicorn>=0.42.0",
]

[dependency-groups]
dev = [
    "pyrefly>=0.58.0",
    "pytest>=9.0.2",
    "ruff>=0.15.8",
]

[tool.ruff]
line-length = 88
target-version = "py313"

[tool.ruff.lint]
select = ["E", "F", "B", "I", "N", "UP", "A", "C4", "SIM", "ARG", "PT", "RET", "ERA"]
ignore = []

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
markers = [
    "e2e: marks tests as end-to-end integration tests (deselect with '-m \"not e2e\"')",
]
addopts = "-m 'not e2e'"

[tool.pyrefly]
project-includes = [
    "**/*.py*",
    "**/*.ipynb",
]
check-unannotated-defs = true
strict-callable-subtyping = true
infer-return-types = "checked"
